	PR target/24445 	* calls.c (expand_call): Copy a return value to a plain register 	if needed.

* gcc.dg/pr24445.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@106774 138bc75d-0d04-0410-961f-82ee72b054a4